--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,8 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.PostgreSQL95Dialect
 
 server.port=8181
-
-spring.freemarker.expose-request-attributes=true
