--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.PostgreSQL95Dialect
 
 server.port=8181
+
+uploadfile.path= /static/image
