--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.PostgreSQL95Diale
 server.port=8181
 
 uploadfile.path= /static/image
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
