--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.PostgreSQL95Dialect
 
 server.port=8181
